--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,28 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
 }
-feature01change
+
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    //swagger2
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    //springboot启动器
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.1.1.RELEASE'
+    //springboot web启动器
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.1.RELEASE'
+    //spring-boot-starter-test
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.1.RELEASE'
+    //spring-boot-autoconfigure 自动注入配置
+    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.1.RELEASE'
+// mysql-connector-java mysql连接
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
+// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
+    compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
+// mybatis-generator-core自动生成代码工具
+    compile group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '1.3.7'
+// https://mvnrepository.com/artifact/org.mybatis/mybatis-spring
+    compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
+// https://mvnrepository.com/artifact/org.mybatis/mybatis
+    compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
+
 }
