--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     //swagger2
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
@@ -21,15 +22,20 @@ dependencies {
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.1.RELEASE'
     //spring-boot-autoconfigure 自动注入配置
     compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.1.RELEASE'
-// mysql-connector-java mysql连接
+    // mysql-connector-java mysql连接
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
-// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
+    // https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
-// mybatis-generator-core自动生成代码工具
+    // mybatis代码自动生成代码工具
     compile group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '1.3.7'
-// https://mvnrepository.com/artifact/org.mybatis/mybatis-spring
+    // mybatis-spring整合
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
-// https://mvnrepository.com/artifact/org.mybatis/mybatis
+    // mybatis
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
+    //注解替代getter、setter
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.1.RELEASE'
+
 
 }
