--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.1.RELEASE'
+// 权限管理
+    compile group: 'org.apache.shiro', name: 'shiro-core', version: '1.4.0'
 
 
 }
