--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     compile group: 'cglib', name: 'cglib', version: '3.2.10'
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.1.1.RELEASE'
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.2.RELEASE'
 
 
 }
