--- a/build.gradle
+++ b/build.gradle
@@ -21,41 +21,22 @@ dependencies {
     //
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     compile group: 'org.apache.shiro', name: 'shiro-spring', version: '1.4.0'
-    //
+    //wagger2
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-    //swagger2
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-    //springboot启动器
+
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.1.1.RELEASE'
     //springboot web启动器
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.1.RELEASE'
-    //spring-boot-starter-test
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.1.RELEASE'
-    //spring-boot-autoconfigure 自动注入配置
     compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.1.RELEASE'
-// mysql-connector-java mysql连接
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
-// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
-// mybatis-generator-core自动生成代码工具
-    compile group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '1.3.7'
-// https://mvnrepository.com/artifact/org.mybatis/mybatis-spring
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
-// https://mvnrepository.com/artifact/org.mybatis/mybatis
-    compile group: 'org.mybatis', name: 'mybatis', version: '3.4.1'
-    // https://mvnrepository.com/artifact/net.coobird/thumbnailator
-    compile group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'
-
-    // https://mvnrepository.com/artifact/org.springframework/spring-context-support
     compile group: 'org.springframework', name: 'spring-context-support', version: '5.0.8.RELEASE'
-
-    // https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-autoconfigure
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-autoconfigure', version: '1.3.2'
-// https://mvnrepository.com/artifact/cglib/cglib
     compile group: 'cglib', name: 'cglib', version: '3.2.10'
-// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.1.1.RELEASE'
-// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.2.RELEASE'
 
 
