--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,4 @@
 server:
-<<<<<<< HEAD
   port: 8080
 
 spring:
@@ -10,25 +9,10 @@ spring:
         driver-class-name: com.mysql.jdbc.Driver
 
 
-    thymeleaf:
-      prefix: classpath:/templates/
-      mode: LEGACYHTML5
-      cache: false
-#
-#
+#    thymeleaf:
+#      prefix: classpath:/templates/
+#      mode: LEGACYHTML5
+#      cache: false
+
 mybatis:
-    config-location: classpath:config/mybatis-config.xml
-=======
-  port: 8089
-spring:
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    username: root
-    password: 123456
-    url: jdbc:mysql://localhost:3306/shiro
-logging:
-  config: classpth:config/logback.xml
-mybatis:
-  mapper-locations: classpath*:com/ccm/**/dao/*.xml
-  configuration: classpath:config/mybatis-config.xml
->>>>>>> master
+    mapper-locations: classpath*:com/ccm/**/dao/*.xml
