--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,6 @@ dependencies {
     //wagger2
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.1.1.RELEASE'
     //springboot web启动器
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.1.RELEASE'
@@ -36,8 +35,13 @@ dependencies {
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
     compile group: 'org.springframework', name: 'spring-context-support', version: '5.0.8.RELEASE'
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-autoconfigure', version: '1.3.2'
-    compile group: 'cglib', name: 'cglib', version: '3.2.10'
+//    compile group: 'cglib', name: 'cglib', version: '3.2.10'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.1.1.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.2.RELEASE'
+    // https://mvnrepository.com/artifact/com.alibaba/druid
+    compile group: 'com.alibaba', name: 'druid', version: '1.1.12'
+    compile(group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version:'1.5.6.RELEASE')
     compile group: 'com.github.theborakompanioni', name: 'thymeleaf-extras-shiro', version: '2.0.0'
+
+
 }
